Add Sai Boorlagadda to committers' list
this closes #104

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -232,6 +232,7 @@ under the License. -->
         <li>Rahul Diyewar</li>
         <li>Randy May</li>
         <li>Roman Shaposhnik</li>
+        <li>Sai Boorlagadda</li>
         <li>Severine Tymon</li>
         <li>Shatarupa Nandi</li>
         <li>Shirish Deshmukh</li>
