--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -190,11 +190,12 @@ under the License. -->
         <li>Christian Tzolov</li>
         <li>Dan Smith</li>
         <li>Darrel Schneider</li>
+        <li>Dave Barnes</li>
         <li>Dave Muirhead</li>
         <li>David Yozie</li>
-        <li>Dick Cavender</li>
 			</div>
 			<div class="col-md-2">
+        <li>Dick Cavender</li>
         <li>Edin Zulich</li>
         <li>Eric Shu</li>
         <li>Gideon Low</li>
@@ -216,9 +217,9 @@ under the License. -->
         <li>Kishor Bachhav</li>
         <li>Konstantin Boudnik</li>
         <li>Konstantin Ignatyev</li>
-        <li>Lise Storc</li>
 			</div>
 			<div class="col-md-2">
+        <li>Lise Storc</li>
         <li>Luke Shannon</li>
         <li>Lyndon Adams</li>
         <li>Lynn Gallinat</li>
@@ -228,6 +229,7 @@ under the License. -->
         <li>Namrata Thanvi</li>
         <li>Neeraj Kumar</li>
         <li>Nilkanth Patel</li>
+        <li>Nitin Lamba</li>
         <li>Qihong Chen</li>
         <li>Rahul Diyewar</li>
         <li>Randy May</li>
@@ -239,9 +241,9 @@ under the License. -->
         <li>Sonal Agarwal</li>
         <li>Soubhik Chakraborty</li>
         <li>Sourabh Bansod</li>
-        <li>Stephane Maldini</li>
 			</div>
 			<div class="col-md-2">
+        <li>Stephane Maldini</li>
         <li>Stuart Williams</li>
         <li>Sudhir Menon</li>
         <li>Sunil Jigyasu</li>
