Fixing artifact names for M2

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -67,7 +67,7 @@ under the License. -->
               <li> <strong>Gradle</strong>
                 <pre class="prettyprint">
   dependencies {
-      compile 'org.apache.geode:gemfire-core:1.0.0-incubating.M2'
+      compile 'org.apache.geode:geode-core:1.0.0-incubating.M2'
   }</pre>
                 <!-- ><script src="https://gist.github.com/markito/b7796cafef4bd273bd07.js"></script>-->
               </li>
@@ -76,7 +76,7 @@ under the License. -->
   &lt;dependencies&gt;
      &lt;dependency&gt;
         &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;gemfire-core&lt;/artifactId&gt;
+        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
         &lt;version&gt;1.0.0-incubating.M2&lt;/version&gt;
      &lt;/dependency&gt;
   &lt;/dependencies&gt;</pre>
