GEODE-1547: Added Nabarun Nag to list of committers on website's Community page, reformatted list so columns balance

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -226,6 +226,7 @@ under the License. -->
         <li>Lynn Hughes-Godfrey</li>
         <li>Mark Bretl</li>
         <li>Michael Schubert</li>
+        <li>Nabarun Nag</li>
         <li>Namrata Thanvi</li>
         <li>Neeraj Kumar</li>
         <li>Nilkanth Patel</li>
@@ -240,9 +241,9 @@ under the License. -->
         <li>Shirish Deshmukh</li>
         <li>Sonal Agarwal</li>
         <li>Soubhik Chakraborty</li>
-        <li>Sourabh Bansod</li>
 			</div>
 			<div class="col-md-2">
+        <li>Sourabh Bansod</li>
         <li>Stephane Maldini</li>
         <li>Stuart Williams</li>
         <li>Sudhir Menon</li>
