GEODE-1576: Website needs to be upgraded to include WAN and CQ
Adding a file missed in previous commit.
Changed wording in Adapters description.

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -123,7 +123,7 @@ under the License. -->
           <div class="col-md-4">
               <div class="bf-icon-wrap" style="font-size:65px; vertical-align: -5px;" aria-hidden="true"><i class="fa fa-plug"></i></div>
               <h3>Adapters</h3>
-              <p>Geode can be used as a drop-in replacement for Redis and memcached, allowing users of these caches to use Geode's server-side features like WAN.</p>
+              <p>Geode can be used as a drop-in replacement for Redis and memcached, allowing users of these caches to use Geode's server-side features like multi-cluster replication.</p>
           </div>
           <div class="col-md-4">
               <div></div>
