GEODE-1694 Add Karen Smoler Miller to committers

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -193,9 +193,9 @@ under the License. -->
         <li>Dave Barnes</li>
         <li>Dave Muirhead</li>
         <li>David Yozie</li>
+        <li>Dick Cavender</li>
 			</div>
 			<div class="col-md-2">
-        <li>Dick Cavender</li>
         <li>Edin Zulich</li>
         <li>Eric Shu</li>
         <li>Gideon Low</li>
@@ -212,6 +212,7 @@ under the License. -->
         <li>Jinmei Liao</li>
         <li>John Blum</li>
         <li>Justin Erenkrantz</li>
+        <li>Karen Smoler Miller</li>
         <li>Ketan Deshpande</li>
         <li>Kirk Lund</li>
         <li>Kishor Bachhav</li>
