GEODE-1743: Add Mike Stolz to committers This closes #231

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -227,6 +227,7 @@ under the License. -->
         <li>Lynn Hughes-Godfrey</li>
         <li>Mark Bretl</li>
         <li>Michael Schubert</li>
+        <li>Mike Stolz</li>
         <li>Nabarun Nag</li>
         <li>Namrata Thanvi</li>
         <li>Neeraj Kumar</li>
