Close #241 GEODE-1903: Correct typo

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -69,7 +69,7 @@ under the License. -->
 		<div class="row">
     	<div class="col-md-3 done">
     	    	<h3><a target="_blank" href="https://fosdem.org/2016/schedule/event/hpc_bigdata_fastdata1/">Clubhouse: Domain-driven Design and Reactive Programming</a> <br />
-              <small><b>Featuring Vernon Vaughn</b><br/>Virtual Event<br/> September 21, 2016, 9-9:50 am PT</small></h3>
+              <small><b>Featuring Vaughn Vernon</b><br/>Virtual Event<br/> September 21, 2016, 9-9:50 am PT</small></h3>
             <p>
 
             </p>
