Add link to release notes

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -60,6 +60,12 @@ under the License. -->
              </span>
             </li>
         </ul>
+
+        <!-- RELEASE NOTES -->
+        <ul>
+            <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.0.0-incubating">Release Notes</a></strong>
+        </ul>
+
         <!-- DEPENDENCY MANAGERS -->
         <div class="container">
           <h4><span class="icon-archive"> Dependency Managers</span></h4>
