--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -90,158 +90,8 @@ under the License. -->
           </ul>
         </div>
         <!-- END OF 1.0 -->
-
-        <!-- START OF M3 -->
-        <h3><span class="icon-flag-checkered"> 1.0.0-incubating.M3</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.zip.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.tar.gz.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-1.0.0-incubating.M3.tar.gz.asc">PGP</a> ]
-              </span>
-
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.zip.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.tar.gz.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M3/apache-geode-src-1.0.0-incubating.M3.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-        <!-- DEPENDENCY MANAGERS -->
-        <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
-  dependencies {
-      compile 'org.apache.geode:geode-core:1.0.0-incubating.M3'
-  }</pre>
-                <!-- ><script src="https://gist.github.com/markito/b7796cafef4bd273bd07.js"></script>-->
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
-  &lt;dependencies&gt;
-     &lt;dependency&gt;
-        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
-        &lt;version&gt;1.0.0-incubating.M3&lt;/version&gt;
-     &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
-        </div>
-        <!-- END OF M3 -->
-        <!-- START OF M2 -->
-        <h3><span class="icon-flag-checkered"> 1.0.0-incubating.M2</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.zip">ZIP</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.zip.sha-256">SHA-256</a> ,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.tar.gz">TAR.GZ</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.tar.gz.sha-256">SHA-256</a> ,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-1.0.0-incubating.M2.tar.gz.asc">PGP</a> ]
-              </span>
-
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.zip">ZIP</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.zip.sha-256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.tar.gz">TAR.GZ</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.tar.gz.sha-256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M2/apache-geode-src-1.0.0-incubating.M2.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-        <!-- DEPENDENCY MANAGERS -->
-        <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
-  dependencies {
-      compile 'org.apache.geode:geode-core:1.0.0-incubating.M2'
-  }</pre>
-                <!-- ><script src="https://gist.github.com/markito/b7796cafef4bd273bd07.js"></script>-->
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
-  &lt;dependencies&gt;
-     &lt;dependency&gt;
-        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
-        &lt;version&gt;1.0.0-incubating.M2&lt;/version&gt;
-     &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
-        </div>
-        <!-- END OF M2 -->
-        <!-- START OF M1 -->
-        <h3><span class="icon-flag-checkered"> 1.0.0-incubating.M1</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.zip">ZIP</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.zip.sha-256">SHA-256</a> ,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.tar.gz">TAR.GZ</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.tar.gz.sha-256">SHA-256</a> ,
-              <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-1.0.0-incubating.M1.tar.gz.asc">PGP</a> ]
-              </span>
-
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.zip">ZIP</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.zip.sha-256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.tar.gz">TAR.GZ</a> , <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.tar.gz.sha-256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/incubator/geode/1.0.0-incubating.M1/apache-geode-src-1.0.0-incubating.M1.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-        <!-- DEPENDENCY MANAGERS -->
-        <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
-  dependencies {
-      compile 'org.apache.geode:gemfire-core:1.0.0-incubating.M1'
-  }</pre>
-                <!-- ><script src="https://gist.github.com/markito/b7796cafef4bd273bd07.js"></script>-->
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
-  &lt;dependencies&gt;
-     &lt;dependency&gt;
-        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;gemfire-core&lt;/artifactId&gt;
-        &lt;version&gt;1.0.0-incubating.M1&lt;/version&gt;
-     &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
-        </div>
-        <!-- END OF M1 -->
       </div>
+      <p>If you need access to older releases they can be found in the <a href="https://archive.apache.org/dist/incubator/geode/">release archives</a>.</p>
       <!-- END OF RELEASE -->
       <hr/>
         <p>
