GEODE-2031 More docs-related site changes

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -1,3 +1,6 @@
+---
+title: Community
+---
 <!-- Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
@@ -68,58 +71,13 @@ under the License. -->
 		</div>
 		<div class="row">
     	<div class="col-md-3 done">
-    	    	<h3><a target="_blank" href="https://fosdem.org/2016/schedule/event/hpc_bigdata_fastdata1/">Clubhouse: Domain-driven Design and Reactive Programming</a> <br />
-              <small><b>Featuring Vaughn Vernon</b><br/>Virtual Event<br/> September 21, 2016, 9-9:50 am PT</small></h3>
-            <p>
-
-            </p>
-            <p>
-              <ul>
-                <li>
-                  <a href="https://pivotal.zoom.us/j/540483502" target="_blank">Watch on Zoom.</a> (Zoom client will download on first use.)
-                </li>
-                <li>
-                  Phone (optional):
-                  <ul>
-                    <li>
-                      408-638-0968 (US toll) or 646-558-8656 (US toll)
-                    </li>
-                    <li>
-                      Meeting ID: 540 483 502
-                    </li>
-                    <li>  <a href="https://pivotal.zoom.us/zoomconference?m=Jnvh-1uWfqE95Tb4M9AwS9X7P9oPTlfH" target="blank">View international numbers</a>
-                </li>
-              </ul>
-            </p>
-        </div>
-			<div class="col-md-3 done">
-    	    	<h3><a target="_blank" href="https://pivotal.zoom.us/j/540483502">Clubhouse: Geode's New Security Infrastructure</a><br />
-                <small><b>Featuring Jinmei
-    Liao</b><br/>Virtual Event<br />October 19, 2016, 9-9:50 am PT</small></h3>
-            <p>
-              <ul>
-                <li>
-                  <a href="https://pivotal.zoom.us/j/540483502" target="_blank">Watch on Zoom.</a> (Zoom client will download on first use.)
-                </li>
-                <li>
-                  Phone (optional):
-                  <ul>
-                    <li>
-                      408-638-0968 (US toll) or 646-558-8656 (US toll)
-                    </li>
-                    <li>
-                      Meeting ID: 540 483 502
-                    </li>
-                    <li>  <a href="https://pivotal.zoom.us/zoomconference?m=Jnvh-1uWfqE95Tb4M9AwS9X7P9oPTlfH" target="blank">View international numbers</a>
-                </li>
-              </ul>
-            </p>
-          </div>
+    	    	<h3>Watch this space for upcoming Apache Geode events! <br />
+      </div>
     </div>
     <div class="row">
 			<div class="col-md-3">
 				<h3>&nbsp;</h3>
-    	    	<p><i>Want to organize a Geode event? <a href="mailto:gregchase@apache.org">Contact us!</a></i><p>
+    	    	<p><i>Want to organize an event? Subscribe to the Apache Geode Users list by sending a blank email to<br/><a href="mailto:user-subscribe@geode.apache.org">user-subscribe@geode.apache.org</a>, then email the list with your event idea!</i><p>
 			</div>
 		</div>
 	</div>
