--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -1,3 +1,6 @@
+---
+title: Releases
+---
 <!-- Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
