Updated Community Page to add new committers (no JIRA ticket)

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -186,7 +186,9 @@ under the License. -->
         <li>John Blum</li>
         <li>Justin Erenkrantz</li>
         <li>Karen Smoler Miller</li>
+        <li>Ken Howe</li>
         <li>Ketan Deshpande</li>
+        <li>Kevin Duling</li>
         <li>Kirk Lund</li>
         <li>Kishor Bachhav</li>
         <li>Konstantin Boudnik</li>
@@ -215,9 +217,9 @@ under the License. -->
         <li>Shatarupa Nandi</li>
         <li>Shirish Deshmukh</li>
         <li>Sonal Agarwal</li>
-        <li>Soubhik Chakraborty</li>
 			</div>
 			<div class="col-md-2">
+        <li>Soubhik Chakraborty</li>
         <li>Sourabh Bansod</li>
         <li>Stephane Maldini</li>
         <li>Stuart Williams</li>
