Update Geode web page's index.html file to include 1.1.0 binaries and source

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -37,6 +37,61 @@ under the License. -->
 				  </p>
       <!-- RELEASES -->
       <div class="container">
+        <!-- START OF 1.1 -->
+        <h3><span class="icon-flag-checkered"> 1.1.0</span></h3>
+        <!-- BINARY -->
+        <ul>
+            <span class="icon-cloud-download"> <strong>Binaries </strong>
+              [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.sha256">SHA-256</a>,
+              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.asc">PGP</a> ] -
+              [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.sha256">SHA-256</a>,
+              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.asc">PGP</a> ]
+              </span>
+
+              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
+            </li>
+        </ul>
+        <!-- SOURCE -->
+        <ul>
+            <span class="icon-cloud-download"> <strong>Source</strong>
+               [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.sha256">SHA-256</a>,
+               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.asc">PGP</a>
+                ] -
+               [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.sha256">SHA-256</a>,
+               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.asc">PGP</a>
+               ]
+             </span>
+            </li>
+        </ul>
+
+        <!-- RELEASE NOTES -->
+        <ul>
+            <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.0">Release Notes</a></strong>
+        </ul>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <h4><span class="icon-archive"> Dependency Managers</span></h4>
+          <ul>
+              <li> <strong>Gradle</strong>
+                <pre class="prettyprint">
+  dependencies {
+      compile 'org.apache.geode:geode-core:1.1.0'
+  }</pre>
+              </li>
+              <li> <strong>Maven</strong>
+                <pre class="prettyprint">
+  &lt;dependencies&gt;
+     &lt;dependency&gt;
+        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+        &lt;version&gt;1.1.0&lt;/version&gt;
+     &lt;/dependency&gt;
+  &lt;/dependencies&gt;</pre>
+              </li>
+          </ul>
+        </div>
+        <!-- END OF 1.1 -->
         <!-- START OF 1.0 -->
         <h3><span class="icon-flag-checkered"> 1.0.0-incubating</span></h3>
         <!-- BINARY -->
