Add Jared Stewart to the committer list

--- a/community/index.html
+++ b/community/index.html
@@ -429,9 +429,9 @@ under the License. -->
         <li>Dave Muirhead</li>
         <li>David Yozie</li>
         <li>Dick Cavender</li>
+        <li>Edin Zulich</li>
 			</div>
 			<div class="col-md-2">
-        <li>Edin Zulich</li>
         <li>Eric Shu</li>
         <li>Gideon Low</li>
         <li>Greg Chase</li>
@@ -441,6 +441,7 @@ under the License. -->
         <li>Jacob Barrett</li>
         <li>Jags Ramnarayan</li>
         <li>Jan Iversen</li>
+        <li>Jared Stewart</li>
         <li>Jason Huynh</li>
         <li>Jens Deppe</li>
         <li>Jianxia Chen</li>
@@ -454,9 +455,9 @@ under the License. -->
         <li>Kirk Lund</li>
         <li>Kishor Bachhav</li>
         <li>Konstantin Boudnik</li>
-        <li>Konstantin Ignatyev</li>
 			</div>
 			<div class="col-md-2">
+        <li>Konstantin Ignatyev</li>
         <li>Lise Storc</li>
         <li>Luke Shannon</li>
         <li>Lyndon Adams</li>
