Update "About the Project" with newer verbiage from the Wiki.

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -149,14 +149,19 @@ under the License. -->
         <div class="row">
             <div class="col-md-12 text-left">
                 <h2>About the Project</h2>
-                <p>Apache Geode is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.</p>
+<p>Apache Geode is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.</p>
 
-                <p>By pooling memory, CPU, network resources, and (optionally) local disk across multiple processes to manage application objects and behavior, it uses dynamic replication and data partitioning techniques to implement high availability, improved performance, scalability, and fault tolerance. In addition to being a distributed data container, Apache Geode is an in-memory data management system that provides reliable asynchronous event notifications and guaranteed message delivery.</p>
+<p>Geode pools memory, CPU, network resources, and optionally local disk across multiple processes
+to manage application objects and behavior. It uses dynamic replication and data partitioning
+techniques to implement high availability, improved performance, scalability, and fault
+tolerance. In addition to being a distributed data container, Apache Geode is an in-memory data
+management system that provides reliable asynchronous event notifications and guaranteed message
+delivery.</p>
 
-                <p>Apache Geode is a mature, robust technology originally developed by GemStone Systems in Beaverton, Oregon.
-Commercially available as GemFire™, the technology was first widely deployed in the financial sector as the transactional, low-latency data engine used
+<p>Apache Geode is a mature, robust technology originally developed by GemStone Systems.
+Commercially available as GemFire™, it was first deployed in the financial sector as the transactional, low-latency data engine used
 in Wall Street trading platforms.
-Today Apache Geode is used by over 600 enterprise customers for high-scale business applications that must meet low latency and 24x7 availability requirements.</p>
+Today Apache Geode technology is used by hundreds of enterprise customers for high-scale business applications that must meet low latency and 24x7 availability requirements.</p>
             </div>
             <!--
             <div class="col-md-4 text-left">
