GEODE-2935 Add Events link to footer, events img to Community

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Apache</li>
+                    <li><a href="http://www.apache.org/events/" target="_blank">Events</a></li>
                     <li><a href="http://www.apache.org/licenses/" target="_blank">License</a></li>
                     <li><a href="http://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
                     <li><a href="http://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
