--- a/releases/index.html
+++ b/releases/index.html
@@ -380,6 +380,7 @@ under the License. -->
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Apache</li>
+                    <li><a href="http://www.apache.org/events/" target="_blank">Events</a></li>
                     <li><a href="http://www.apache.org/licenses/" target="_blank">License</a></li>
                     <li><a href="http://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
                     <li><a href="http://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
