--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -33,176 +33,149 @@ under the License. -->
       <div class="row">
     		<div class="col-md-9">
     			<p>
-				Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.
+				Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.
 				  </p>
       <!-- RELEASES -->
       <div class="container">
-        <!-- START OF 1.1.1 -->
-        <h3><span class="icon-flag-checkered"> 1.1.1</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.asc">PGP</a> ]
-              </span>
 
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-src-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-src-1.1.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.tar.gz.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-
+        <!-- START OF 1.2.0 -->
+        <h3><span class="icon-flag-checkered"> 1.2.0</span></h3>
         <!-- RELEASE NOTES -->
-        <ul>
-            <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.1">Release Notes</a></strong>
-        </ul>
+        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.2.0">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span class="icon-cloud-download"> <strong>Binaries </strong>
+          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.zip.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.zip.asc">PGP</a> ] -
+          [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-1.2.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.tar.gz.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-1.2.0.tar.gz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span class="icon-cloud-download"> <strong>Source</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-src-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/apache-geode-src-1.2.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/apache-geode-src-1.2.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span class="icon-cloud-download"> <strong>Examples</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/geode-examples-1.2.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.2.0/geode-examples-1.2.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.2.0/geode-examples-1.2.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
 
         <!-- DEPENDENCY MANAGERS -->
         <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+  dependencies {
+      compile 'org.apache.geode:geode-core:1.2.0'
+  }
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+  &lt;dependencies&gt;
+     &lt;dependency&gt;
+        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+        &lt;version&gt;1.2.0&lt;/version&gt;
+     &lt;/dependency&gt;
+  &lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.2.0 -->
+        <!-- START OF 1.1.1 -->
+        <h3><span class="icon-flag-checkered"> 1.1.1</span></h3>
+        <!-- RELEASE NOTES -->
+        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.1">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span class="icon-cloud-download"> <strong>Binaries </strong>
+          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.zip.asc">PGP</a> ] -
+          [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-1.1.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-1.1.1.tar.gz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span class="icon-cloud-download"> <strong>Source</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-src-1.1.1.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.1/apache-geode-src-1.1.1.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.1/apache-geode-src-1.1.1.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
   dependencies {
       compile 'org.apache.geode:geode-core:1.1.1'
-  }</pre>
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
+  }
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
   &lt;dependencies&gt;
      &lt;dependency&gt;
         &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
         &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
         &lt;version&gt;1.1.1&lt;/version&gt;
      &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
+  &lt;/dependencies&gt;
+</pre>
         </div>
         <!-- END OF 1.1.1 -->
         <!-- START OF 1.1 -->
         <h3><span class="icon-flag-checkered"> 1.1.0</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.asc">PGP</a> ]
-              </span>
-
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-
         <!-- RELEASE NOTES -->
-        <ul>
-            <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.0">Release Notes</a></strong>
-        </ul>
+        <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.1.0">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span class="icon-cloud-download"> <strong>Binaries </strong>
+          [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.zip.asc">PGP</a> ] -
+          [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.sha256">SHA-256</a>,
+          <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-1.1.0.tar.gz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span class="icon-cloud-download"> <strong>Source</strong>
+           [ <a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.zip.asc">PGP</a>
+            ] -
+           [<a href="http://apache.org/dyn/closer.cgi/geode/1.1.0/apache-geode-src-1.1.0.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.sha256">SHA-256</a>,
+           <a href="https://dist.apache.org/repos/dist/release/geode/1.1.0/apache-geode-src-1.1.0.tar.gz.asc">PGP</a>
+           ]
+         </span>
 
         <!-- DEPENDENCY MANAGERS -->
         <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
   dependencies {
       compile 'org.apache.geode:geode-core:1.1.0'
-  }</pre>
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
+  }
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
   &lt;dependencies&gt;
      &lt;dependency&gt;
         &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
         &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
         &lt;version&gt;1.1.0&lt;/version&gt;
      &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
+  &lt;/dependencies&gt;
+</pre>
         </div>
         <!-- END OF 1.1 -->
-        <!-- START OF 1.0 -->
-        <h3><span class="icon-flag-checkered"> 1.0.0-incubating</span></h3>
-        <!-- BINARY -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Binaries </strong>
-              [ <a href="http://apache.org/dyn/closer.cgi/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.zip.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.zip.asc">PGP</a> ] -
-              [<a href="http://apache.org/dyn/closer.cgi/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.tar.gz.sha256">SHA-256</a>,
-              <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-1.0.0-incubating.tar.gz.asc">PGP</a> ]
-              </span>
-
-              <blockquote>Binary downloads are provided for the convenience of our users and are not official Apache Geode releases. </blockquote>
-            </li>
-        </ul>
-        <!-- SOURCE -->
-        <ul>
-            <span class="icon-cloud-download"> <strong>Source</strong>
-               [ <a href="http://apache.org/dyn/closer.cgi/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.zip">ZIP</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.zip.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.zip.asc">PGP</a>
-                ] -
-               [<a href="http://apache.org/dyn/closer.cgi/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.tar.gz">TAR.GZ</a>, <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.tar.gz.sha256">SHA-256</a>,
-               <a href="https://dist.apache.org/repos/dist/release/geode/1.0.0-incubating/apache-geode-src-1.0.0-incubating.tar.gz.asc">PGP</a>
-               ]
-             </span>
-            </li>
-        </ul>
-
-        <!-- RELEASE NOTES -->
-        <ul>
-            <strong><a href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.0.0-incubating">Release Notes</a></strong>
-        </ul>
-
-        <!-- DEPENDENCY MANAGERS -->
-        <div class="container">
-          <h4><span class="icon-archive"> Dependency Managers</span></h4>
-          <ul>
-              <li> <strong>Gradle</strong>
-                <pre class="prettyprint">
-  dependencies {
-      compile 'org.apache.geode:geode-core:1.0.0-incubating'
-  }</pre>
-                <!-- ><script src="https://gist.github.com/markito/b7796cafef4bd273bd07.js"></script>-->
-              </li>
-              <li> <strong>Maven</strong>
-                <pre class="prettyprint">
-  &lt;dependencies&gt;
-     &lt;dependency&gt;
-        &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
-        &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
-        &lt;version&gt;1.0.0-incubating&lt;/version&gt;
-     &lt;/dependency&gt;
-  &lt;/dependencies&gt;</pre>
-              </li>
-          </ul>
-        </div>
-        <!-- END OF 1.0 -->
       </div>
       <p>If you need access to older releases they can be found in the <a href="https://archive.apache.org/dist/incubator/geode/">release archives</a>.</p>
       <!-- END OF RELEASE -->
