Add committers to website
    - Deepak Dixit
    - Ernest Burghardt
    - Galen O’Sullivan
    - Joey McAllister

--- a/community/index.html
+++ b/community/index.html
@@ -429,11 +429,14 @@ under the License. -->
         <li>Dave Barnes</li>
         <li>Dave Muirhead</li>
         <li>David Yozie</li>
+        <li>Deepak Dixit</li>
         <li>Dick Cavender</li>
         <li>Edin Zulich</li>
 			</div>
 			<div class="col-md-2">
+        <li>Ernest Burghardt</li>
         <li>Eric Shu</li>
+        <li>Galen O’Sullivan</li>
         <li>Gideon Low</li>
         <li>Greg Chase</li>
         <li>Hemant Bhanawat</li>
@@ -447,6 +450,7 @@ under the License. -->
         <li>Jens Deppe</li>
         <li>Jianxia Chen</li>
         <li>Jinmei Liao</li>
+        <li>Joey McAllister</li>
         <li>John Blum</li>
         <li>Justin Erenkrantz</li>
         <li>Karen Smoler Miller</li>
@@ -454,10 +458,10 @@ under the License. -->
         <li>Ketan Deshpande</li>
         <li>Kevin Duling</li>
         <li>Kirk Lund</li>
-        <li>Kishor Bachhav</li>
-        <li>Konstantin Boudnik</li>
 			</div>
 			<div class="col-md-2">
+        <li>Kishor Bachhav</li>
+        <li>Konstantin Boudnik</li>
         <li>Konstantin Ignatyev</li>
         <li>Lise Storc</li>
         <li>Luke Shannon</li>
@@ -480,9 +484,9 @@ under the License. -->
         <li>Severine Tymon</li>
         <li>Shatarupa Nandi</li>
         <li>Shirish Deshmukh</li>
-        <li>Sonal Agarwal</li>
 			</div>
 			<div class="col-md-2">
+        <li>Sonal Agarwal</li>
         <li>Soubhik Chakraborty</li>
         <li>Sourabh Bansod</li>
         <li>Stephane Maldini</li>
