Correct missing icon in first heading of Releases page

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -18,12 +18,12 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License. -->
 
-<section class="bf-releases">
+<section class="bf-tagline">
     <div class="container">
     	<div class="row">
-    	    <div class="col-md-12" id="events">
-    	    	<h2><span class="icon-releases"></span></h2>
-			</div>
+          <br />
+    	    	<h2>Releases</h2>
+    		<p>Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.</p>
 		</div>
 	</div>
 </section>
@@ -32,9 +32,6 @@ under the License. -->
     <div class="container">
       <div class="row">
     		<div class="col-md-9">
-    			<p>
-				Releases of Geode are made available to the general public at no charge, under the <a href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.
-				  </p>
       <!-- RELEASES -->
       <div class="container">
 
