added new committers

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -142,11 +142,12 @@ under the License. -->
 		<div class="row">
       <br/>
 			<div class="col-md-2">
-        <li>Amey Barve</li>
+        <li>Addison Huddy</li>
         <li>Adib Saikali</li>
         <li>Alan Strait</li>
+        <li>Alexander Murmann</li>
+        <li>Amey Barve</li>
         <li>Amogh Shetkar</li>
-        <li>Anil Gingade</li>
         <li>Anilkumar Gingade</li>
         <li>Anthony Baker</li>
         <li>Ashvin Agrawal</li>
@@ -154,6 +155,8 @@ under the License. -->
         <li>Avinash Dongre</li>
         <li>Barry Oglesby</li>
         <li>Ben Reser</li>
+        <li>Blake Bender</li>
+        <li>Brain Rowe</li>
         <li>Bruce Schuchardt</li>
         <li>Bruce Szalwinski</li>
         <li>Catherine Johnson</li>
@@ -163,6 +166,7 @@ under the License. -->
         <li>Darrel Schneider</li>
         <li>Dave Barnes</li>
         <li>Dave Muirhead</li>
+        <li>David Kimura</li>
         <li>David Yozie</li>
         <li>Deepak Dixit</li>
         <li>Dick Cavender</li>
@@ -174,9 +178,11 @@ under the License. -->
         <li>Galen O’Sullivan</li>
         <li>Gideon Low</li>
         <li>Greg Chase</li>
+        <li>Helena Bales</li>
         <li>Hemant Bhanawat</li>
         <li>Henry Saputra</li>
         <li>Hitesh Khamesra</li>
+        <li>Ivan Godwin</li>
         <li>Jacob Barrett</li>
         <li>Jags Ramnarayan</li>
         <li>Jan Iversen</li>
@@ -187,6 +193,7 @@ under the License. -->
         <li>Jinmei Liao</li>
         <li>Joey McAllister</li>
         <li>John Blum</li>
+        <li>Juan José Ramos</li>
         <li>Justin Erenkrantz</li>
         <li>Karen Smoler Miller</li>
         <li>Ken Howe</li>
@@ -204,23 +211,32 @@ under the License. -->
         <li>Lynn Gallinat</li>
         <li>Lynn Hughes-Godfrey</li>
         <li>Mark Bretl</li>
+        <li>Masaki Yamakawa</li>
+        <li>Micheal Dodge</li>
+        <li>Michael Oleske</li>
         <li>Michael Schubert</li>
+        <li>Mike Martell</li>
         <li>Mike Stolz</li>
         <li>Nabarun Nag</li>
         <li>Namrata Thanvi</li>
         <li>Neeraj Kumar</li>
+        <li>Nick Reich</li>
         <li>Nilkanth Patel</li>
         <li>Nitin Lamba</li>
+        <li>Patrick Rhomberg</li>
         <li>Qihong Chen</li>
         <li>Rahul Diyewar</li>
         <li>Randy May</li>
+        <li>Robert Houghton</li>
         <li>Roman Shaposhnik</li>
+        <li>Ryan McMahon</li>
+			</div>
+			<div class="col-md-2">
         <li>Sai Boorlagadda</li>
+        <li>Sean Goller</li>
         <li>Severine Tymon</li>
         <li>Shatarupa Nandi</li>
         <li>Shirish Deshmukh</li>
-			</div>
-			<div class="col-md-2">
         <li>Sonal Agarwal</li>
         <li>Soubhik Chakraborty</li>
         <li>Sourabh Bansod</li>
